Changes in Slurm-GCP 5.0.0
==========================
 -- Added shielded VM support
 -- suspend.py - now handles "Quota exceeded" error
 -- Compute nodes are no longer orphaned on terraform destroy
 -- Changed Terraform minimum version to 1.0
 -- Replaced `foundry/` with `packer/`
 -- Terraform modules now use Google Cloudfoundry Toolkit
 -- Added auto_create_subnetworks option

Changes in Slurm-GCP 4.0.5
==========================
 -- suspend.py - now handles "Quota exceeded" error.

Changes in Slurm-GCP 4.0.4
==========================
 -- Configure sockets, cores, threads on compute nodes for better performace
    with cons_tres.

Changes in Slurm-GCP 4.0.3
==========================
 -- Introduce NEWS file
 -- Recommended image is now
	schedmd-slurm-public/hpc-centos-7-schedmd-slurm-20-11-7
 -- Changed slurmrestd port to 6842 (from 80)
 -- partitions[].image_hyperthreads=false now actively disables hyperthreads
    on hpc-centos-7 images, starting with the now recommended image
 -- partitions[].image_hyperthreads is now true in tfvars examples
 -- Fixed running of custom-compute-install on login node
 -- Fixed slurmrestd install on foundry debian images
 -- Disable SELinux (was permissive) to fix hpc-centos-7 reboot issue
 -- Updated Slurm to 20.11.07