@@ -1,0 +1,29 @@
+# Copyright 2021 SchedMD LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+---
+
+- name: Gather Facts of Scripts
+  find:
+    paths:
+      - "{{role_path}}/files/scripts.d"
+    file_type: file
+    hidden: no
+    follow: yes
+    recurse: yes
+  delegate_to: 127.0.0.1 # run locally
+  register: scripts
+
+- name: Run Scripts
+  script: "{{item.path}}"
+  with_items: "{{scripts.files}}"
